js/js.translator/testData/incremental/invalidation/eagerInitializationMoveBetweenModules/lib2/placeholder.0.kt
// Keep lib2 present before the eager declaration is moved into it.
val placeholder = 0
